--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   },
   "devDependencies": {
     "commitizen": "^4.2.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "vue": "^3.0.4"
+    "cz-conventional-changelog": "^3.3.0"
   },
   "config": {
     "commitizen": {
@@ -34,6 +33,8 @@
     }
   },
   "peerDependencies": {
-    "@vue/cli-service": "^4.5.9"
+    "@vue/babel-plugin-jsx": "^1.0.0-rc.5",
+    "@vue/cli-service": "^4.5.9",
+    "vue": "^3.0.4"
   }
 }
