fix: fix SFC style class name replacement

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-cli-plugin-generators",
-  "version": "0.0.1-beta.0",
+  "version": "0.0.1-beta.1",
   "description": "A Vue CLI plugin to generate components or pages.",
   "main": "index.js",
   "author": "wjq990112",
@@ -10,7 +10,7 @@
     "vue",
     "vue-cli",
     "plugin",
-    "generator"
+    "generators"
   ],
   "repository": {
     "type": "git",
